# qt6_template_cmake

./: CMakeLists.txt  README.md  TODO
apps/: CMakeLists.txt
apps/hello/: CMakeLists.txt  main.cpp
apps/hello_gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
cmake/: IWYU.cmake
